--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:prod": "NODE_ENV=production node app.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
