--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       POSTGRES_PASSWORD: '12345'  # change this to your desired password
       POSTGRES_DB: users_history_prod  # change this to your desired database name
     volumes:
-      - /mnt/volume-hil-1/postgres-data-1:/var/lib/postgresql/data  # persistent storage for database data
+      - postgres_data:/var/lib/postgresql/data  # persistent storage for database data
     ports:
       - "5432:5432"  # expose postgres port to the host
 
